--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,25 @@ h1 {
   font-size: 50px;
 }
 
+img#foodpic {
+  width: 100%;
+  height: 50vh;
+}
+
+div#foodbkgd {
+  color: whitesmoke;
+  font-family: "Cookbook Title";
+  font-size: 60px;
+  text-align: center;
+  padding: 20%;
+  width: 100%;
+  height: auto;
+  background-size: cover;
+  background-position: top center;
+  background-image: url(https://images.unsplash.com/photo-1543339494-b4cd4f7ba686?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
+  
+}
+
 h4 {
   margin-bottom: 10px;
   font-size: 25px;
